[package]
name = "tfstate-backend-r2"
description = "Terraform state backend using Cloudflare R2, supporting locking."
repository = "https://github.com/leonbreedt/tfstate-backend-r2"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.21.2"
chrono = { version = "0.4.26", features = ["wasmbind"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
worker = "0.0.15"

[profile.release]
lto = true
strip = true
codegen-units = 1
